--- a/src/IHM/FenetreIdentification.form
+++ b/src/IHM/FenetreIdentification.form
@@ -78,6 +78,12 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtLogin">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="p1401535"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtLoginActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnValider">
       <Properties>
@@ -88,6 +94,12 @@
       </Events>
     </Component>
     <Component class="javax.swing.JPasswordField" name="txtPassword">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="211695"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtPasswordActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
