--- a/src/IHM/FenetrePrincipale.form
+++ b/src/IHM/FenetrePrincipale.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
   </Properties>
@@ -29,6 +29,8 @@
                   <Component id="jScrollPane1" pref="479" max="32767" attributes="0"/>
                   <Group type="102" attributes="0">
                       <Component id="btnAjouterVip" min="-2" pref="102" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="134" max="-2" attributes="0"/>
+                      <Component id="btnSupprimer" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
               </Group>
@@ -41,7 +43,10 @@
           <Group type="102" alignment="1" attributes="0">
               <Component id="jScrollPane1" min="-2" pref="302" max="-2" attributes="0"/>
               <EmptySpace pref="50" max="32767" attributes="0"/>
-              <Component id="btnAjouterVip" min="-2" pref="36" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="btnAjouterVip" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
+                  <Component id="btnSupprimer" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
               <EmptySpace min="-2" pref="65" max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -78,5 +83,13 @@
         </Component>
       </SubComponents>
     </Container>
+    <Component class="javax.swing.JButton" name="btnSupprimer">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="supprimer un Vip"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSupprimerActionPerformed"/>
+      </Events>
+    </Component>
   </SubComponents>
 </Form>
